fixed alignment on some paragraphs, amount anims

--- a/index.css
+++ b/index.css
@@ -12,6 +12,9 @@ body {
 
 .main-container {
     margin: 6.25rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
 }
 
 h1,
@@ -30,20 +33,28 @@ select {
 }
 
 .balance-section {
-    text-align: right;
+    border: 1px solid black;
+    font-weight: bold;
     margin: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: flex-end;
 }
+
 
 .case-open-window-holder {
 
     position: relative;
-    margin: 6.25rem;
+    /* margin: 5.25rem; */
+
     display: flex;
     justify-content: center;
+
 }
 
 .case-open-window {
-    /* position: absolute; */
+    position: relative;
     border: 2px solid black;
     max-width: 43.75rem;
     min-height: 6.25rem;
@@ -54,6 +65,22 @@ select {
 .case-select-container {
     display: flex;
     justify-content: center;
+    align-items: center;
+}
+
+.case-image-section {
+    display: flex;
+    justify-content: center;
+}
+
+.case-image-section>img {
+    width: 7rem;
+    transition: scale 0.3s ease-in-out;
+    scale: 1;
+}
+
+.case-image-section>img:hover {
+    scale: 1.1;
 }
 
 .case-open-marker {
@@ -75,6 +102,13 @@ select {
     padding: 2%;
     min-height: 20px;
     border-radius: 5%;
+    transition: border 1s ease-in-out;
+    transition: background-color 1s ease-in-out;
+}
+
+.open-button:hover {
+    border: 2px solid orange;
+    background-color: orange;
 }
 
 .item-holder {
@@ -120,7 +154,6 @@ select {
     transition: scale 0.3s ease-in-out;
 
     font-weight: bold;
-
 }
 
 .obtainedItem:hover {
@@ -130,8 +163,6 @@ select {
 .obtainedItem:hover * {
     scale: 1.05;
 }
-
-
 
 .obtained-image {
     margin: 0 auto;
@@ -169,6 +200,15 @@ select {
 .animatedItem {
     animation-duration: 6s;
     animation-fill-mode: both;
+}
+
+
+#status {
+    transition: scale 0.5s ease-in-out;
+}
+
+.highlight-amount {
+    scale: 1.3;
 }
 
 @keyframes fadeIn {
